<resources>
    <string name="app_name">THINKnDRAW</string>
    <string name="app_banner">Think What You Need To Think</string>

    <string name="action_settings">Settings</string>
    <string name="action_normal">Normal</string>
    <string name="action_emboss">Emboss</string>
    <string name="action_blur">Blur</string>
    <string name="action_clear">Clear</string>
    <string name="action_save">Save</string>

    <string name="txt_draw_here">Draw Here</string>

    <string name="time_cost_value">%1$d ms</string>
    <string name="label_start">Start</string>
    <string name="label_history">History</string>
    <string name="label_multiplayer">Multiplayer</string>
    <string name="label_settings">Settings</string>
    <string name="label_challenge">Challenge</string>
    <string name="label_check">Check</string>
    <string name="label_clear">Clear</string>
    <string name="txt_starts_in">Starts In</string>
    <string name="hint_enter_name">Your name</string>
    <string name="txt_next">Next</string>
    <string name="txt_play">Play</string>
    <string name="txt_offilne">Offline</string>
    <string name="txt_users">Users</string>
    <string name="txt_online">Online</string>
    <string name="txt_invite">Invite</string>
    <string name="txt_vs">VS</string>
    <string name="txt_accept">Accept</string>
    <string name="txt_new_challenge">XYZ challenged you</string>
</resources>
