<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.workfort.thinkndraw.MainActivity">

    <item
        android:id="@+id/action_normal"
        android:orderInCategory="100"
        android:title="@string/action_normal"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_emboss"
        android:orderInCategory="101"
        android:title="@string/action_emboss"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_blur"
        android:orderInCategory="102"
        android:title="@string/action_blur"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear"
        android:orderInCategory="103"
        android:title="@string/action_clear"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_save"
        android:orderInCategory="104"
        android:title="@string/action_save"
        app:showAsAction="never" />
</menu>
