<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Arhan Ashik"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@+id/btn_play"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/btn_play"/>

        <TextView
            android:id="@+id/tv_online_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            tools:text="@string/txt_online"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp"
            app:layout_constraintTop_toTopOf="@+id/btn_play"
            app:layout_constraintStart_toEndOf="@+id/tv_name"
            app:layout_constraintBottom_toBottomOf="@+id/btn_play"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_play"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:text="@string/txt_play"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/colorPrimary"
            app:cornerRadius="10dp"
            app:rippleColor="@color/colorAccent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_offline"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:text="@string/txt_offilne"
            android:textColor="@android:color/darker_gray"
            app:cornerRadius="10dp"
            app:strokeColor="@android:color/darker_gray"
            app:strokeWidth="1dp"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>