<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="tv_title,tv_count"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_starts_in"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:gravity="center"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tv_count"/>

        <TextView
            android:id="@+id/tv_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="3"
            android:textColor="@android:color/black"
            android:textSize="48sp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_canvas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            tools:visibility="visible"
            app:constraint_referenced_ids="tv_question,bg_paint_view,paint_view,btn_check,btn_clear,tv_answer"/>

        <TextView
            android:id="@+id/tv_question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Draw a car with 90% accuracy"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/paint_view"/>

        <TextView
            android:id="@+id/bg_paint_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bg_paint"
            android:text="@string/txt_draw_here"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="@+id/paint_view"
            app:layout_constraintTop_toTopOf="@+id/paint_view"
            app:layout_constraintEnd_toEndOf="@+id/paint_view"
            app:layout_constraintBottom_toBottomOf="@+id/paint_view"/>

        <com.workfort.thinkndraw.util.view.PaintView
            android:id="@+id/paint_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:foreground="@drawable/bg_paint"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintDimensionRatio="w, 1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_question"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tv_answer"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_check"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:text="@string/label_check"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/colorPrimaryOverlay"
            app:cornerRadius="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/paint_view"
            app:layout_constraintEnd_toStartOf="@+id/btn_clear"
            app:layout_constraintBottom_toTopOf="@+id/tv_answer"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_clear"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:text="@string/label_clear"
            android:textColor="@android:color/black"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="2dp"
            app:cornerRadius="10dp"
            app:layout_constraintStart_toEndOf="@+id/btn_check"
            app:layout_constraintTop_toTopOf="@+id/btn_check"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/btn_check"/>

        <TextView
            android:id="@+id/tv_answer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="You've got 80% accuracy"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_check"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>